<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:context=".presentation.fragments.TodoItemFragment">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:contentDescription="@string/logo_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_title_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="13dp"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_logo"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_title"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_description_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingStart="13dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_title"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_description"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingStart="13dp"
            android:text="@string/date_end"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_date_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"

                android:hint="@string/click_here_to_choose_date"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/bt_date_picker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/calendar"
            android:src="@drawable/ic_calendar_preview"
            app:layout_constraintBottom_toBottomOf="@+id/til_date_end"
            app:layout_constraintEnd_toEndOf="@+id/til_date_end"
            app:layout_constraintTop_toTopOf="@+id/til_date_end"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/bt_add_done"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_cancel_delete"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_date_end"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_cancel_delete"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/cancel_button_background"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_add_done"
            app:layout_constraintTop_toBottomOf="@+id/til_date_end"
            tools:ignore="TextContrastCheck" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
